Fixed clipping bug with long lists

--- a/sport-war/src/main/webapp/static/pimp/sport_pimp.css
+++ b/sport-war/src/main/webapp/static/pimp/sport_pimp.css
@@ -1253,3 +1253,8 @@ form.workoutEditor {
 .editingParticipantsList ul.userList li a.remover:hover {
     background-position: -180px 0;
 }
+
+.editingParticipantsList .autocomplete {
+    overflow: auto;
+    height: 66px;
+}
